--- a/css/template.css
+++ b/css/template.css
@@ -10,6 +10,12 @@
     -webkit-background-clip: text;
 }
 
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -31,6 +37,7 @@ body {
 
 body::-webkit-scrollbar{
     width: 2px;
+    height: 4px;
 }
 
 body::-webkit-scrollbar-track-piece{
@@ -182,7 +189,6 @@ main {
 
 footer {
     background-color: #496989cb;
-    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
