--- a/css/template.css
+++ b/css/template.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script:400,700);
 @font-face {
     font-family: 'Playful';
     src: url('../fonts/Playful/PlayfairDisplay-VariableFont_wght.ttf') format("truetype"),
@@ -10,6 +11,12 @@
     -webkit-background-clip: text;
 }
 
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -20,13 +27,32 @@ body {
     
     cursor: url(../images/cursors/PottedPlantNS.cur),auto;
 
-    font-family: 'Playful', sans-serif;
+    font-family: 'Dancing Script', sans-serif;
+    /* font-family: 'Playful', sans-serif; */
 
     background-image: url('../images/background/background.jpg');
+    backdrop-filter: blur(3px);
     background-size: cover; 
     background-position: center; 
+    background-attachment: fixed;
 }
 
+body::-webkit-scrollbar{
+    width: 2px;
+    height: 4px;
+}
+
+body::-webkit-scrollbar-track-piece{
+    background: green;
+}
+
+body::-webkit-scrollbar-thumb{
+    background-color: #496989;
+}
+
+body::-webkit-scrollbar-thumb:hover{
+    background-color: #A8CD9F;
+}
 /*         ↓↓↓         HEADER         ↓↓↓         */
 
 header {
@@ -61,11 +87,55 @@ header a:hover{
 .left h1{
     font-weight: bold;
     padding-left: 10px;
+    margin-right: 60px;
 }
 
 .left #plant_Logo{
     width: 80px;
     padding-bottom: 5px;
+}
+
+.search_Bar{
+    width:50%;
+    max-width: 600px;
+    background: rgba(255, 255, 255, 0.2);
+    display: flex;
+    align-items: center;
+    border-radius: 60px;
+    padding: 10px 20px;
+}
+
+@media (max-width: 600px) {
+    .search_Bar{
+        display: none;
+    }
+}
+
+.search_Bar input{
+    background: transparent;
+    flex:1;
+    border:0;
+    outline: none;
+    padding: 20px 16px;
+    font-size: 25px;
+    color: #cac7ff;
+    font-family: 'Dancing Script', sans-serif;
+}
+
+::placeholder{
+    color: #cac7ff;
+}
+
+.search_Bar button img{
+    width:25px;
+}
+.search_Bar button{
+    border: 0;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    background: #58629b;
+    cursor: pointer;
 }
 
 .right{
@@ -79,8 +149,9 @@ header a:hover{
 
 .right nav ul li {
     display: inline;
-    margin-left: 40px;
-    font-size: 20px;
+    margin-left: 60px;
+    font-size: 2.5vmin;
+    padding-bottom: 12px;
 }
 
 @media (max-width: 600px) {
@@ -92,120 +163,24 @@ header a:hover{
         padding-left: 20px;
         padding-right: 150px;
     }
-    .left #plant_Logo{
-        display: none;
-    }
     .left h1{
         font-weight: bold;
         font-size: 25px;
+    }
+    .left #plant_Logo{
+        width: 50px;
     }
     .right{
         display: none;
     }
 }
 
-/* Search bar*/
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    background-color: #496989;
-    color: #A8CD9F;
-}
-
-/* Make the left and right sections of the header take up necessary space */
-.left, .right {
-    flex: 1;
-}
-
-.search_Bar {
-    position: relative;
-    display: flex;
-    flex-grow: 2; 
-    margin: 0 15px;
-    align-items: stretch; /* Align children vertically */
-}
-
-.search_Bar input[type="text"] {
-    flex-grow: 1;
-    border: 2px solid #A8CD9F;
-    padding: 10px 15px;
-    font-size: 1rem;
-    outline: none;
-    border-radius: 20px 0 0 20px;
-    border-right: none; /* Remove right border */
-}
-
-.search_Bar button {
-    background-color: #A8CD9F;
-    border: 2px solid #A8CD9F;
-    border-left: none; /* Remove left border to seamlessly connect with input */
-    padding: 0 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0 20px 20px 0;
-    cursor: pointer;
-}
-
-.search_Bar button img {
-    height: 100%;
-    width: auto;
-    display: block;
-}
-
-/* Adjust the font size of the input placeholder */
-.search_Bar input[type="text"]::placeholder {
-    font-size: 1rem; /* Match font size with input text */
-    vertical-align: middle;
-}
-
-/* Adjustments for smaller screens */
-@media (max-width: 600px) {
-    .search_Bar {
-        margin: 0;
-        flex-grow: 1;
-    }
-    .search_Bar input[type="text"], .search_Bar button {
-        height: auto; /* Reset the height for smaller devices */
-        padding: 8px 10px; /* Adjust padding */
-    }
-    .left, .right {
-        flex: 0; /* Don't let these flex on smaller screens */
-    }
-}
-
-
 /*         ↑↑↑         HEADER         ↑↑↑         */
 /*         ↓↓↓          MAIN          ↓↓↓         */
 
 main {
     flex: 1;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    height: 100vh;
 }
-
-.rectangle {
-    width: 400px;
-    height: 500px;
-    background-color: #58a399c2; 
-    margin: 50px 20px 0px 20px;
-    border-radius: 10%;
-    border : solid 2px #E2F4C5;
-}
-
-.rectangle-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; /* Centers items horizontally */
-    align-items: center; /* Aligns items vertically */
-}
-
-
-
 
 /*         ↑↑↑          MAIN          ↑↑↑         */
 /*         ↓↓↓         FOOTER         ↓↓↓         */
@@ -221,7 +196,7 @@ footer {
 
 footer p{
     font-weight: bold;
-    font-size: 23px;
+    font-size: max(2.5vmin, 15px);
     margin: 8px 10px;
 }
 
@@ -230,8 +205,8 @@ footer p{
     opacity: 60%;
     display: inline-block;
     position: relative;
-    width: 35px;
-    height: 35px;
+    width: max(3vmin, 25px);
+    height: max(3vmin, 25px);
     transition: opacity 0.3s ease;
 }
 
