--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 .about-main {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content:space-evenly;
 }
 
 .fact-item {
