--- a/css/profile.css
+++ b/css/profile.css
@@ -1,144 +1,372 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-.profile-header {
-    display: flex;
-    align-items: center; /* Align items vertically */
-    background: #ffffff; /* White background */
-    padding: 20px;
-    border-radius: 10px; /* Rounded corners */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-    /*margin-bottom: 1rem; /* Space below the header */
-    margin-bottom: 30px; /* More space below the header */
+
+body{
+    margin-top:20px;
+    color: #1a202c;
+    text-align: left;
+    background-color: #e2e8f0;    
 }
-
-.profile-pic {
-    width: 120px; /* Fixed size */
-    height: 120px; /* Fixed size */
-    border-radius: 50%; /* Circular image */
-    margin-right: 20px; /* Space after the image */
-    object-fit: cover; /* Ensures the image covers the area */
-    border: 3px solid #a0e090; /* Border color from your scheme */
+.main-body {
+    padding: 15px;
 }
-
-.user-details h2 {
-    font-size: 2rem; /* Larger font size */
-    margin-bottom: 0.5rem;
-    color: #333; /* Darker text for better readability */
-    font-weight: 700; /* Bold font weight */
-}
-
-.user-details p {
-    font-size: 1rem;
-    color: #666; /* Lighter color for less important info */
-    line-height: 1.5; /* More line height for readability */
-}
-
-.user-info {
-    margin: 5px 0; /* Uniform margin for p tags */
-}
-
-.profile-container {
-    background-color: #fff;
-    padding: 40px; /* Increase for more internal space */
-    margin: 0 auto; /* Centers the container */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1); /* Adjust for a subtle fading effect */
-    border-radius: 8px; /* Rounded corners */
-    width: 80%; /* Adjust the width as necessary */
-    box-sizing: border-box;
-    transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out; /* Smooth transitions for any changes */
-}
-
-@media (max-width: 768px) {
-    .profile-container {
-        width: 95%; /* More width for small screens */
-        margin: 20px auto; /* More vertical space on small screens */
-        padding: 20px; /* Less padding on small screens */
-    }
-}
-
-
-/* .profile-container::before {
-    content: '';
-    position: absolute;
-    top: -10px; 
-    right: -10px; 
-    bottom: -10px; 
-    left: -10px; 
-    z-index: -1;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 20%, rgba(255, 255, 255, 1) 80%, rgba(255, 255, 255, 0));
-    border-radius: inherit; 
-} */
-
-
-
-.plant-cards-container {
-    display: flex;
-    flex-wrap: wrap; /* Allows cards to wrap to the next line on small screens */
-    justify-content: space-between; /* Even spacing between the cards */
-    align-items: stretch; /* Stretches cards to fill available vertical space */
-    gap: 20px; /* Space between the cards */
-    padding: 20px;
-    box-sizing: border-box;
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
 }
 
 .card {
-    flex: 1; /* Allows cards to grow and take up available space */
-    min-width: calc(50% - 20px); /* Sets a minimum width for cards to take up half the container width minus the gap */
-    max-width: calc(50% - 20px); /* Sets a maximum width to prevent cards from growing too large */
-    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
 }
 
-@media (min-width: 800px) {
-    .card {
-        min-width: calc(50% - 20px); /* Adjust the card size for three columns */
-        max-width: calc(50% - 20px);
-    }
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
 }
 
-/* @media (min-width: 768px) {
-    .plant-cards-container {
-        flex-direction: row; 
-        flex-wrap: wrap; 
-        justify-content: space-around; 
-    }
-    
-    .card {
-        width: 45%; 
-        margin-bottom: 20px;
-    }
-} */
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
 
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
 
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
+}
 
-/* .plant-cards-container {
+.button-div {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around; 
+}
+
+/* List */
+
+.list-group-flush {
+    width: 100%; 
+    padding-left: 0; 
+    list-style-type: none; 
+}
+
+.list-group-item {
+    transition: background-color 0.3s ease;
+    border-bottom: 1px solid #f0f0f0; 
+    padding: 10px; 
+}
+
+.list-group-item:last-child {
+    border-bottom: none; 
+}
+
+.list-group-item h6 {
+    display: block;
+    margin: 0; 
+    font-weight: 500;
+    padding: 15px 20px;
+    line-height: 1.5; 
+}
+
+.list-group-item a {
+    display: block;
+    padding: 15px 20px;
+    font-weight: 500;
+    color: #4a4a4a; 
+    text-decoration: none; 
+}
+
+.list-group-item a:hover {
+    text-decoration: #f8f9fa; 
+}
+
+.list-group-item:first-child {
+    border-top: none; 
+}
+
+/*------------------------*/
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+    max-width: 75%;
+    margin: auto;
+    text-align: center;
+    overflow: hidden;
+  }
+  
+  .title {
+    color: grey;
+    font-size: 18px;
+  }
+  
+  button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+  
+  a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+  }
+  
+  button:hover, a:hover {
+    opacity: 0.7;
+  } 
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+#big-container {
+    display : flex;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    border : solid 5px #474544;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 6px;
+    opacity: 80px;
+    justify-content: baseline;
+    /* width: 100%; 
+    max-width: 1200px; */
+    margin: auto;
+    /* flex : 0.3; */
+}
+
+#container {
+    font-family: 'Montserrat', Arial, sans-serif;
+    flex-basis: calc(33.333% - 40px);
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-grow: 3;
+    max-width: 100%;
+
+    border: solid 3px #474544;
+    min-width: 33.333%;
+    background-image: linear-gradient(to bottom, #496989, #3f867d, #496989);
+    display: block;
+    margin: 200px;
+    position: relative;
+    background-image: linear-gradient(to bottom, #496989,#3f867d,#496989);
+    border-radius: 6%;
+    border: #E2F4C5 2px solid;
+    opacity: 90%;
+
+  }
+  
+
+#container h1 {
+    color: #cac7ff;
+    font-size: 32px;
+    font-weight: 700;
+    letter-spacing: 7px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
+body {
+    font-family: 'Arial', sans-serif;
+    color: #333;
+    margin: 0;
     padding: 20px;
-    background-image: url('../images/plant.png');
-    background-size: cover;
-    margin: 20px auto;
-    max-width: 800px;
-    border-radius: 8px;
+}
+
+.profile-container {
+    display: flex;
+    margin: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.underline {
+    border-bottom: solid 2px #cac7ff;
+    margin: -0.512em auto;
+    width: 100px;
+}
+
+.profile-header {
+    text-align: center;
+    padding: 20px;
+    border-bottom: 1px solid #dee2e6;
+}
+
+.profile-header .profile-picture {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.profile-header h1 {
+    font-size: 24px;
+    margin-top: 10px;
+}
+
+.profile-header p {
+    color: #666;
+    margin: 5px 0;
+}
+
+/* button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 } */
 
-/* Reset default margin and padding */
-html, body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
+button:hover {
+    background-color: #0056b3;
+}
+
+.social-links {
+    text-align: center;
+    padding: 20px;
+    border-bottom: 1px solid #dee2e6;
+}
+
+.social-links a {
+    margin: 0 10px;
+    color: #007bff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.social-links a:hover {
+    color: #0056b3;
+}
+
+.user-details {
+    display: flex;
+    padding: 20px;
+}
+
+.details, .project-status {
+    flex: 1;
+    margin: 10px;
+    padding: 20px;
+    background-color: #f8f9fa;
+    border: 1px solid #dee2e6;
+    border-radius: 5px;
+}
+
+.details h2, .project-status h2 {
+    border-bottom: 1px solid #dee2e6;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    color: #333;
+    font-size: 18px;
+}
+
+.details p {
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+/* Buttons */
+
+.edit-btn {
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+.follow-btn {
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+.message-btn {
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+.contact-btn {
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+/* Buttons */
+
+.project-status progress {
     width: 100%;
+    height: 20px;
+    border-radius: 5px;
+    color: #007bff;
 }
 
-/* Ensure the main element takes full width */
-.profile-main {
-    display: block; /* This ensures it's a block-level element, taking full width */
-    width: 100%; /* Takes full width of its parent */
-    margin: 0 auto; /* Centers the content if necessary, remove if not needed */
+.project-status progress[value]::-webkit-progress-bar {
+    background-color: #e9ecef;
+    border-radius: 5px;
 }
 
-/* If .profile-main is directly inside the body and you want no space around it */
-body {
-    margin: 0;
-    padding: 0;
+.project-status progress[value]::-webkit-progress-value {
+    background-color: #007bff;
+    border-radius: 5px;
+}
+
+.project-status progress[value]::-moz-progress-bar {
+    background-color: #007bff;
+    border-radius: 5px;
+}
+
+.project-status label {
+    display: block;
+    margin-top: 20px;
+}
+
+
+/* Dimensions */
+.col {
+    padding: 15px;
+    flex: 2;
+}
+
+.central-column {
+    flex: 3; 
+}
+
+.left-column,
+.right-column {
+    width: 20%; 
+}
+
+.central-column {
+    width: 60%; 
+}
+
+
+@media (max-width: 768px) {
+    .user-details {
+        flex-direction: column;
+    }
 }
