--- a/css/collection-list.css
+++ b/css/collection-list.css
@@ -1,24 +1,100 @@
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: grid;
+    place-content: center;
+    background: #425a52;
+}
+
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+}
+
+button:hover, a:hover {
+    opacity: 0.7;
+} 
+
+.format-btn {
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.button-div { 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.main-body {
+    padding: 15px;
+}
+
 .collections-container {
     text-align: center; 
     margin: 20px 0; 
 }
 
+
 .collections-card {
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    flex: 1 1 auto;
+
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+
+    position: relative;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
     background-color: #fff; 
     border-radius: 0.25rem; 
-    padding: 20px; 
+    padding: 1rem;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06); 
     text-align: center;
     margin: auto;
     max-width: 75%; 
+    min-width: 0;
+    overflow: hidden;
 }
-
 
 .collections-title {
     font-size: 24px;
     color: #3a3a3a; 
     margin-bottom: 15px; 
     text-transform: uppercase; 
+}
+
+.collection-particularity {
+    flex-direction: column;
 }
 
 .collections {
@@ -62,7 +138,7 @@
 
 
 
-.socialMediaIcon{
+.socialMediaIcon2{
     width: calc(25% - 10px);
     padding: 10%;
     border: none;
@@ -80,6 +156,35 @@
     transition: opacity 0.3s ease;
 }
 
-.socialMediaIcon:hover{
+.socialMediaIcon2:hover{
     opacity: 100%;
+}
+
+
+
+
+
+
+.col {
+    padding: 15px;
+    flex: 2;
+}
+
+.central-column {
+    flex: 3; 
+}
+
+.left-column,
+.right-column {
+    width: 20%; 
+}
+
+.central-column {
+    width: 60%; 
+}
+
+@media (max-width: 768px) {
+    .collection-card {
+        max-width: 100%; 
+    }
 }
