--- a/css/login.css
+++ b/css/login.css
@@ -126,6 +126,15 @@ main {
         margin-right: 40px;
         transform: translate(0%,-7%);
     }
+    .login{
+        margin-left: 0px;
+        margin-right: 0px;
+        width:95%;
+    }
+    #login1 #headerLogin{
+        padding-bottom: 70px;
+        margin-top: 30px;
+    }
 }
 
 #textBox p{
@@ -273,7 +282,11 @@ form p
     #submit{
         transform: translate(-65%,0%);
     }
-    
+
+    #textBox{
+        margin-top: 50px;
+    }
+
     #submit:hover{
         width:130px;
         height: 27px;
@@ -292,9 +305,6 @@ form p
 footer {
     margin-top: 100px;
 }
-
-
-
 
 .f-wrapper--2 .flower__leaf--1{
     background-color: #ff847c;
