--- a/css/register.css
+++ b/css/register.css
@@ -44,8 +44,9 @@ main {
 @media (max-width: 850px) {
     #login2{
         position: relative;
-        
-        width:90%;
+        margin-left: 0px;
+        margin-right: 0px;
+        width:95%;
         height: 600px;
     
         background-image: linear-gradient(to bottom, #496989,#3f867d,#496989);
@@ -60,7 +61,9 @@ main {
     #login1{
         position: relative;
         
-        width:90%;
+        margin-left: 0px;
+        margin-right: 0px;
+        width:95%;
         height: 400px;
     
         background-image: linear-gradient(to bottom, #496989,#3f867d,#496989);
@@ -122,6 +125,7 @@ main {
 }
 
 #login1 #headerText{
+    margin-top: 30px;
     padding-bottom: 100px;
 }
 
@@ -314,7 +318,15 @@ form p
     #submit{
         transform: translate(-65%,0%);
     }
-    
+
+    #login1{
+        height: 500px;
+    }
+
+    #textBox{
+        margin-top: 20px;
+    }
+
     #submit:hover{
         width:130px;
         height: 27px;
