--- a/css/aboutUsCards.css
+++ b/css/aboutUsCards.css
@@ -1,7 +1,7 @@
 .card h1 {
 	font-size:  max(10pt, 5.25vmin);
 	text-align: center;
-	color: white;
+	color: #A8CD9F;
 }
 .card p {
 	font-size: max(10pt, 2.5vmin);
@@ -31,17 +31,17 @@
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	width: 85vmin;
-	height: 65vmin;
+	height: 50vmin;
 	margin: 2rem 3rem auto;
-	border: 8px solid;
+	border: 4px solid;
 	border-image: linear-gradient(
 			-50deg,
-			green,
+			rgba(0, 128, 0, 0.541),
 			#00b300,
 			forestgreen,
 			green,
 			lightgreen,
-			#00e600,
+			#00e60085,
 			green
 		)
 		1;
@@ -49,13 +49,18 @@
 	position: relative;
 	overflow: hidden;
 }
+
+#whoAreWe{
+	height: 65vmin;
+}
+
 .overlay {
 	position: relative;
 	display: flex;
 	width: 100%;
 	height: 100%;
 	padding: 1rem 0.75rem;
-	background: #186218;
+	background: #0e460e;
 	transition: 0.4s ease-in-out;
 	z-index: 1;
 }
@@ -69,9 +74,9 @@
 	border: 3px solid;
 	border-image: linear-gradient(
 			to bottom,
-			#aea724 5%,
-			forestgreen 35% 65%,
-			#aea724 95%
+			#A8CD9F,
+			#58A399,
+			#A8CD9F
 		)
 		0 0 0 100%;
 	transition: 0.3s ease-in-out 0.2s;
@@ -83,17 +88,30 @@
 	right: 0;
 	width: 60vmin;
 	height: 100%;
-	background-image: url("https://assets.codepen.io/4787486/trees.png");
 	background-size: cover;
 	transition: 0.3s ease-in-out;
-	/* border: 1px solid green; */
 }
+
+#card1{
+	background-image: url("../images/background/card1");
+}
+
+#card2{
+	background-image: url("../images/background/card2.jpg");
+}
+
+#card3{
+	background-image: url("../images/background/card3.jpg");
+}
+
 
 .inset {
 	max-width: 50%;
 	margin: 0.25em 1em 1em 0;
 	border-radius: 0.25em;
 	float: left;
+	background-color: rgb(230, 229, 229);
+	border: solid #58A399 2px;
 }
 
 .dots {
@@ -111,7 +129,7 @@
 .dot {
 	width: 14px;
 	height: 14px;
-	background: yellow;
+	background: indigo;
 	border: 1px solid indigo;
 	border-radius: 50%;
 	transition: 0.3s ease-in-out 0.3s;
@@ -145,6 +163,19 @@
 }
 .wrap:hover .dots .dot {
 	background: white;
+}
+
+.wrap:hover h1 {
+    display: none;
+}
+
+#smallTitle{
+	color: #A8CD9F;
+	margin-bottom: 2rem;
+}
+
+.wrap:hover #smallTitle{
+	display: none;
 }
 
 /* Animations and timing delays */
