--- a/css/aboutUsCards.css
+++ b/css/aboutUsCards.css
@@ -15,15 +15,15 @@
 }
 
 .wrap ::-webkit-scrollbar-track-piece{
-    background: green;
+    background: #58A399;
 }
 
 .wrap ::-webkit-scrollbar-thumb{
-    background-color: #a0e090;
+   background-color: rgb(160, 224, 144);
 }
 
 .wrap ::-webkit-scrollbar-thumb:hover{
-    background-color: #a0e090a4;
+	background-color: rgb(49, 100, 36);
 }
 
 .wrap {
@@ -34,15 +34,14 @@
 	height: 50vmin;
 	margin: 2rem 3rem auto;
 	border: 4px solid;
+	border-radius: 2%;
 	border-image: linear-gradient(
 			-50deg,
-			rgba(0, 128, 0, 0.541),
-			#00b300,
-			forestgreen,
-			green,
-			lightgreen,
-			#00e60085,
-			green
+			rgba(38, 49, 148, 0.541),
+			#58A399,
+			#496989,
+			#58A399,
+			#496989
 		)
 		1;
 	transition: 0.3s ease-in-out;
@@ -60,7 +59,7 @@
 	width: 100%;
 	height: 100%;
 	padding: 1rem 0.75rem;
-	background: #0e460e;
+	background: #496989;
 	transition: 0.4s ease-in-out;
 	z-index: 1;
 }
