--- a/css/about.css
+++ b/css/about.css
@@ -1,53 +1,22 @@
+
 .about-main {
     width: 100%;
     display: flex;
-    padding: 20px;
-}
-
-.facts-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; 
+    justify-content:space-evenly;
 }
 
 .fact-item {
-    flex-basis: calc(33.333% - 20px);
-    margin: 10px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: auto; 
-    flex-grow: 0;
-    flex-shrink: 0;
-}
-
-@media (max-width: 768px) {
-    .fact-item {
-        flex-basis: calc(50% - 20px);     
-    }
-}
-
-@media (max-width: 480px) {
-    .fact-item {
-        flex-basis: 100%; 
-    }
-} 
-
-/* .fact-item {
     flex-basis: calc(33.333% - 20px); 
-    flex-wrap: wrap;
-    flex-direction: column;
-    height: 300px; 
     background-size: cover;
     background-position: center;
     margin: 10px;
-    display: flex;
     align-items: center; 
     justify-content: center; 
     color: white; 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
     border-radius: 10px; 
-} */
+}
 
 * {
 	box-sizing: border-box;
@@ -114,20 +83,6 @@ h2 {
 	border: 0.35rem solid;
 }
 
-
-@media screen and (max-width: 768px) {
-    #image-div1, #image-div2, #image-div3, .facts-section .fact-item {
-        height: 450px; 
-    }
-}
-
-@media screen and (max-width: 480px) {
-    #image-div1, #image-div2, #image-div3, .facts-section .fact-item {
-        height: 300px; 
-    }
-}
-
-
 .facts-section {
     display: flex;
     flex-wrap: wrap;
@@ -141,7 +96,6 @@ h2 {
     text-align: center;
     max-width: 80%; 
 }
-
 
 @media screen and (max-width: 768px) {
     .info-block {
